--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,7 +12,6 @@
   --color-primary: #e5f4ff;
   --color-secondary: #1a2e40;
   --color-gold-accent: #f5b942;
-  --color-blue-btn: #38a2bc;
 
   /* Extra lightblue if needed */
   --color-lightblue: #b1cac9;
@@ -22,6 +21,11 @@
   --color-darkgrey: #2c2f33;
   --color-lightgrey: #f5f7fa;
   --color-midgrey: #a8b3c5;
+
+  /* Btn colors */
+  --color-blue-btn: #38a2bc;
+  --color-blueg1: #48a8bf;
+  --color-blueg2: #53c3de;
 
   /* Text sizes */
   --text-base: 1rem;
@@ -35,4 +39,8 @@
 
   /* Font families */
   --font-inknut: 'Inknut Antiqua', serif;
+
+  /* Shadows */
+  --drop-shadow-test: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  --drop-shadow-text: 0 1.2px 1.2px rgba(0, 0, 0, 0.8);
 }
