--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -43,11 +43,13 @@
   /* Shadows */
   --drop-shadow-test: 0px 4px 4px rgba(0, 0, 0, 0.25);
   --drop-shadow-text: 0 1.2px 1.2px rgba(0, 0, 0, 0.8);
+  --drop-shadow-hamburger: -5px 0 15px rgba(0, 0, 0, 0.3);
 
   /* Media queries */
   --breakpoint-1xl: 1200px;
   --breakpoint-mid: 1080px;
   --breakpoint-smd: 840px;
+  --breakpoint-xs: 620px;
 }
 
 /* Kouluesimerkit */
