Sort card base component and svg

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -45,6 +45,8 @@
   --drop-shadow-text: 0 1.2px 1.2px rgba(0, 0, 0, 0.8);
   --drop-shadow-hamburger: -5px 0 15px rgba(26, 46, 64, 0.45);
   --shadow-sidebar: 0px 0px 18px rgba(26, 46, 64, 0.5);
+  --drop-shadow-custom: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  --shadow-custom: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
   /* Media queries */
   --breakpoint-1xl: 1200px;
