Created destination view layout

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -54,11 +54,16 @@
   --shadow-modal:
     0px 16px 32px rgba(0, 0, 0, 0.35), 0px 4px 8px rgba(0, 0, 0, 0.25);
 
+  --shadow-containerTop: 0px -5px 30px 4px rgb(26, 46, 64);
+
   /* Media queries */
-  --breakpoint-1xl: 1200px;
-  --breakpoint-mid: 1080px;
-  --breakpoint-smd: 840px;
-  --breakpoint-xs: 620px;
+  /* --breakpoint-2xl: 90rem; */
+  /* --breakpoint-custom-2xl: 1440px; */
+  --breakpoint-3xl: 104rem;
+  --breakpoint-1xl: 75rem;
+  --breakpoint-mid: 68rem;
+  --breakpoint-smd: 52.5rem;
+  --breakpoint-xs: 39rem;
 
   /* Custom heights */
   --height-screenWithoutHeader: calc(100vh - 5.5rem);
