--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -55,6 +55,7 @@
     0px 16px 32px rgba(0, 0, 0, 0.35), 0px 4px 8px rgba(0, 0, 0, 0.25);
 
   --shadow-containerTop: 0px -5px 30px 4px rgb(26, 46, 64);
+  --drop-shadow-sidebar-strong: 4px 0 20px rgba(0, 0, 0, 0.3);
 
   /* Media queries */
   /* --breakpoint-2xl: 90rem; */
